--- a/backend/index.html
+++ b/backend/index.html
@@ -1,102 +1,58 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cadastro de Clientes</title>
-  <style>
-    body { font-family: Arial; margin: 2rem; }
-    h1 { color: #333; }
-    input, button { margin: 5px; padding: 8px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 10px; text-align: left; }
-    tr:hover { background-color: #f1f1f1; }
-  </style>
-</head>
-<body>
-  <h1>Cadastro de Clientes</h1>
+const express = require('express');
+const path = require('path');
+const sqlite3 = require('sqlite3').verbose();
+const bodyParser = require('body-parser');
 
-  <input type="text" id="nome" placeholder="Nome" />
-  <input type="email" id="email" placeholder="Email" />
-  <input type="text" id="telefone" placeholder="Telefone" />
-  <button onclick="adicionarCliente()">Cadastrar</button>
+const app = express();
+const PORT = 3000;
 
-  <table id="tabelaClientes">
-    <thead>
-      <tr><th>ID</th><th>Nome</th><th>Email</th><th>Telefone</th><th>Ações</th></tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+// Middleware
+app.use(bodyParser.urlencoded({ extended: true }));
+app.use(express.static(__dirname));
 
-  <script>
-    const API_URL = "https://9f0bcfbd-2ac7-44af-a918-179e573b3f8d-00-wcbk1zfkwnzn.spock.replit.dev";
+// Banco de Dados
+const db = new sqlite3.Database('banco.db');
 
-    async function carregarClientes() {
-      const res = await fetch(`${API_URL}/clientes`);
-      const clientes = await res.json();
-      const tbody = document.querySelector("#tabelaClientes tbody");
-      tbody.innerHTML = "";
+db.serialize(() => {
+  db.run(`CREATE TABLE IF NOT EXISTS usuarios (
+    id INTEGER PRIMARY KEY AUTOINCREMENT,
+    nome TEXT NOT NULL,
+    email TEXT NOT NULL,
+    telefone TEXT
+  )`);
+});
 
-      clientes.forEach(cliente => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${cliente.id}</td>
-          <td><input value="${cliente.nome}" onchange="editar(${cliente.id}, this.value, 'nome')" /></td>
-          <td><input value="${cliente.email}" onchange="editar(${cliente.id}, this.value, 'email')" /></td>
-          <td><input value="${cliente.telefone}" onchange="editar(${cliente.id}, this.value, 'telefone')" /></td>
-          <td><button onclick="excluirCliente(${cliente.id})">Excluir</button></td>
-        `;
-        tbody.appendChild(tr);
-      });
-    }
+// Rota principal
+app.get('/', (req, res) => {
+  res.sendFile(path.join(__dirname, 'index.html'));
+});
 
-    async function adicionarCliente() {
-      const nome = document.getElementById("nome").value;
-      const email = document.getElementById("email").value;
-      const telefone = document.getElementById("telefone").value;
-
-      if (!nome || !email || !telefone) {
-        alert("Preencha todos os campos!");
-        return;
+// Rota para cadastro
+app.post('/cadastro', (req, res) => {
+  const { nome, email, telefone } = req.body;
+  db.run(`INSERT INTO usuarios (nome, email, telefone) VALUES (?, ?, ?)`,
+    [nome, email, telefone],
+    (err) => {
+      if (err) {
+        console.error(err);
+        res.status(500).send('Erro ao salvar no banco de dados');
+      } else {
+        res.send('Cadastro realizado com sucesso!');
       }
+    });
+});
 
-      await fetch(`${API_URL}/clientes`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ nome, email, telefone })
-      });
-
-      document.getElementById("nome").value = "";
-      document.getElementById("email").value = "";
-      document.getElementById("telefone").value = "";
-      carregarClientes();
+// Opcional: rota para ver usuários cadastrados
+app.get('/usuarios', (req, res) => {
+  db.all('SELECT * FROM usuarios', (err, rows) => {
+    if (err) {
+      res.status(500).send('Erro ao buscar usuários');
+    } else {
+      res.json(rows);
     }
+  });
+});
 
-    async function editar(id, valor, campo) {
-      const res = await fetch(`${API_URL}/clientes`);
-      const clientes = await res.json();
-      const cliente = clientes.find(c => c.id === id);
-      if (!cliente) return;
-
-      cliente[campo] = valor;
-
-      await fetch(`${API_URL}/clientes/${id}`, {
-        method: "PUT",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(cliente)
-      });
-
-      carregarClientes();
-    }
-
-    async function excluirCliente(id) {
-      if (!confirm("Deseja realmente excluir este cliente?")) return;
-
-      await fetch(`${API_URL}/clientes/${id}`, { method: "DELETE" });
-      carregarClientes();
-    }
-
-    carregarClientes();
-  </script>
-</body>
-</html>
+app.listen(PORT, () => {
+  console.log(`Servidor rodando em http://localhost:${PORT}`);
+});
