--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sistema Básico de Cadastro</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Sistema de Cadastro</title>
 </head>
 <body>
-  <h1>Sistema Básico de Cadastro</h1>
+  <h1>Cadastro de Usuários</h1>
+  <form id="cadastroForm">
+    <label>Nome:</label><br />
+    <input type="text" name="nome" required /><br />
 
-  <form id="formCliente">
-    <input type="hidden" id="clienteId" />
-    <label>Nome: <input type="text" id="nome" required /></label>
-    <label>Email: <input type="email" id="email" required /></label>
-    <label>Telefone: <input type="text" id="telefone" /></label>
-    <label>CPF: <input type="text" id="cpf" /></label>
-    <button type="submit">Salvar</button>
-    <button type="button" id="cancelarEdicao" style="display:none;">Cancelar</button>
+    <label>Email:</label><br />
+    <input type="email" name="email" required /><br />
+
+    <label>Telefone:</label><br />
+    <input type="text" name="telefone" /><br /><br />
+
+    <button type="submit">Cadastrar</button>
   </form>
 
-  <table>
-    <thead>
-      <tr><th>Nome</th><th>Email</th><th>Telefone</th><th>CPF</th><th>Ações</th></tr>
-    </thead>
-    <tbody id="listaClientes"></tbody>
-  </table>
+  <p id="mensagem"></p>
 
-  <script src="script.js"></script>
+  <script>
+    const form = document.getElementById('cadastroForm');
+    const mensagem = document.getElementById('mensagem');
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const dados = new FormData(form);
+      const body = new URLSearchParams(dados);
+
+      const resposta = await fetch('/cadastro', {
+        method: 'POST',
+        body
+      });
+
+      const texto = await resposta.text();
+      mensagem.textContent = texto;
+      form.reset();
+    });
+  </script>
 </body>
 </html>
-
