--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,8 @@
   <form id="cadastro-form">
     <input type="text" id="nome" placeholder="Nome" required>
     <input type="email" id="email" placeholder="Email" required>
+    <input type="text" id="cargo" placeholder="Cargo" required>
+    <input type="text" id="endereco" placeholder="Endereço" required>
     <button type="submit">Cadastrar</button>
   </form>
   <ul id="lista"></ul>
