--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,15 +6,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Cadastro de Pessoas</h1>
-  <form id="cadastro-form">
-    <input type="text" id="nome" placeholder="Nome" required>
-    <input type="email" id="email" placeholder="Email" required>
-    <input type="text" id="cargo" placeholder="Cargo" required>
-    <input type="text" id="endereco" placeholder="Endereço" required>
-    <button type="submit">Cadastrar</button>
-  </form>
-  <ul id="lista"></ul>
+  <div class="container">
+    <h1>Cadastro de Pessoas</h1>
+    <form id="cadastro-form">
+      <input type="text" id="nome" placeholder="Nome" required>
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="text" id="cargo" placeholder="Cargo" required>
+      <input type="text" id="endereco" placeholder="Endereço" required>
+      <button type="submit">Cadastrar</button>
+    </form>
+    <ul id="lista"></ul>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
